--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,11 @@
-*{
+*,*::after,*::before{
   font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
   margin: 0;
   border: 0;
+}
+h1,h2,h3{
+  font-family: 'Roboto Mono', monospace;
 }
 :root{
   /* primary shades */
@@ -18,32 +22,37 @@
   /* links + buttons */
   --clr-hover: #7ff16b;
 }
+body{
+  background-color: var(--clr-primary-3);
+}
 /*==================
 navigation bar
 ==================*/
 nav{
   background: linear-gradient(180deg,var(--clr-secondary-1),var(--clr-secondary-2));
   box-shadow: 0 0 20px var(--clr-black);
-  padding: 10px 0;
   display: grid;
   align-items: center;
   text-align: center;
   grid-template-columns: 1fr 1fr 1fr;
-  height: 50px;
+  height: 60px;
 }
+/* nav title */
 .nav-title-container{
   grid-column: 1/2;
 }
-.nav-title-container h2{
+.nav-title-container h1{
   color: var(--clr-white);
   font-weight: 400;
 }
+/* nav logo */
 .nav-logo-container{
   grid-column: 2/3;
 }
 .nav-logo-container img{
   height: 45px;
 }
+/* nav links */
 .nav-links-container{
   grid-column: 3/3 ;
 }
@@ -56,5 +65,24 @@ nav{
 .nav-links-container a:hover{
   color: var(--clr-hover);
 }
-
-
+/*===============
+INDEX.HTML
+===============*/
+/*===============
+introduction section
+===============*/
+section.introduction{
+  text-align: center;
+  padding: 40px 80px;
+}
+section.introduction h2{
+  font-weight: 400;
+  font-size: 45px;
+  margin: 0 0 25px 0;
+}
+section.introduction p{
+  font-size: 18px;
+}
+section.introduction p span{
+  font-weight: 600;
+}
