--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,21 +10,24 @@ h1,h2,h3{
 :root{
   /* primary shades */
   --clr-primary-1:#abc2a5;
-  --clr-primary-2:#c1dabc;
-  --clr-primary-3:#d4f1cf;
+  --clr-primary-2:#e2e7ff;
+  --clr-primary-3:#fcfdff;
   /* secondary shades (nav bar/ highlights)*/
-  --clr-secondary-1:#7c7c7c;
-  --clr-secondary-2:#919191;
-  --clr-secondary-3:#f6fff5;
+  --clr-secondary-1:#353535;
+  --clr-secondary-2:#4d4d4d;
+  --clr-secondary-3:#bababa;
   /* black and white */
   --clr-black: #222;
   --clr-white: #fff;
   /* links + buttons */
   --clr-hover: #7ff16b;
+  --clr-btn:#c8d1ff;
+  --clr-btn-hover:#e2e7ff;
 }
 body{
-  background-color: var(--clr-primary-3);
+  background-color: var(--clr-white);
 }
+
 /*==================
 navigation bar
 ==================*/
@@ -68,12 +71,22 @@ nav{
 /*===============
 INDEX.HTML
 ===============*/
+/*--------------
+background image
+--------------*/
+.background-img{
+}
+.background-img img{
+  display: block;
+  margin: 30px auto;
+  width: 50%;
+}
 /*===============
 introduction section
 ===============*/
 section.introduction{
   text-align: center;
-  padding: 40px 80px;
+  padding: 20px 80px 90px 80px;
 }
 section.introduction h2{
   font-weight: 400;
@@ -91,6 +104,7 @@ benefits section
 ==============*/
 section.benefits{
   background: var(--clr-primary-2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 section.benefits h2{
   text-align: center;
@@ -104,12 +118,23 @@ section.benefits h2{
   align-items: center;
   padding: 0 20px 20px;
 }
+/* card styling */
 .benefit-card{
   text-align: center;
   align-self: center;
   justify-self: center;
   max-width: 400px;
-  background: var(--clr-secondary-2);
+  background: var(--clr-white);
+  border: 1px solid var(--clr-secondary-1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 10px;
   border-radius: 10px;
+}
+/* card content styling */
+.benefit-card h3{
+  padding: 0 0 5px 0;
+  border-bottom: 1px solid var(--clr-black);
+}
+.benefit-card p{
+  padding: 10px 0;
 }
