--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -142,3 +142,27 @@ section.benefits h2{
 /*============
 tips section
 ============*/
+section.tips{
+  margin: 75px 0 ;
+}
+section.tips h2{
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+/* img left - text right tip container */
+.tips-container{
+  display: flex;
+  max-width: 1200px;
+  margin: 15px auto;
+}
+.tips-container img{
+  width: 20%;
+  margin-right: 25px;
+}
+.tips-text-container{
+  margin: auto 0;
+}
+.tips-text-container h3{
+  margin-bottom: 10px;
+}
