--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -154,14 +154,14 @@ section.tips h2{
 .tips-container{
   display: flex;
   max-width: 1200px;
-  margin: 15px auto;
+  margin: 25px auto;
+  border: 1px solid var(--clr-secondary-3);
 }
 .tips-container img{
   width: 20%;
-  margin-right: 25px;
 }
 .tips-text-container{
-  margin: auto 0;
+  margin: auto 20px;
 }
 .tips-text-container h3{
   margin-bottom: 10px;
