--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,12 +1,6 @@
-*,*::after,*::before{
-  font-family: 'Roboto', sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-  border: 0;
-}
-h1,h2,h3{
-  font-family: 'Roboto Mono', monospace;
-}
+/*============
+Global Styles
+============*/
 :root{
   /* primary shades */
   --clr-primary-1:#abc2a5;
@@ -21,14 +15,38 @@ h1,h2,h3{
   --clr-white: #fff;
   /* links + buttons */
   --clr-hover: #7ff16b;
-  --clr-btn:#c8d1ff;
-  --clr-btn-hover:#e2e7ff;
+  --clr-btn-border:#7c92ff;
+  --clr-btn-hover:#dfe4ff;
+
+  /* Font Variables*/
+  --font-roboto-mono: 'Roboto Mono', monospace;
+  --font-roboto-serif: 'Roboto', sans-serif;
+}
+*,*::after,*::before{
+  font-family: var(--font-roboto-serif);
+  box-sizing: border-box;
+  margin: 0;
+  border: 0;
+}
+h1,h2,h3{
+  font-family: var(--font-roboto-mono);
 }
 body{
   background-color: var(--clr-white);
   overscroll-behavior-y: none;
 }
-
+.regular-btn{
+  background: transparent;
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-family: var(--font-roboto-mono);
+  border: 2px solid var(--clr-btn-border);
+  transition: 0.25s;
+  cursor: pointer;
+}
+.regular-btn:hover{
+  background: var(--clr-btn-hover);
+}
 /*==================
 navigation bar
 ==================*/
@@ -72,12 +90,24 @@ nav a{
 nav a:hover{
   color: var(--clr-hover);
 }
-/*===============
+
+/*============
+footer
+============*/
+footer{
+  background: linear-gradient(180deg,var(--clr-secondary-2),var(--clr-secondary-1));
+  text-align: center;
+  padding: 20px 0;
+  color: var(--clr-white);
+}
+
+/*=========================
 INDEX.HTML
-===============*/
-/*--------------
+===========================*/
+
+/*==============
 background image
---------------*/
+==============*/
 .background-img img{
   display: block;
   margin: 30px auto;
@@ -132,6 +162,10 @@ section.benefits h2{
   padding: 10px;
   border-radius: 10px;
 }
+.benefit-card:hover{
+  transform: scale(1.1);
+  transition: 0.25s;
+}
 /* card content styling */
 .benefit-card h3{
   padding: 0 0 5px 0;
@@ -167,12 +201,8 @@ section.tips h2{
 .tips-text-container h3{
   margin-bottom: 10px;
 }
-/*============
-footer
-============*/
-footer{
-  background: linear-gradient(180deg,var(--clr-secondary-2),var(--clr-secondary-1));
-  text-align: center;
-  padding: 20px 0;
-  color: var(--clr-white);
+.tips-container:hover{
+  background: var(--clr-primary-2);
+  transform: scale(1.1);
+  transition: 0.25s;
 }
