--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -174,6 +174,10 @@ section.benefits h2{
 .benefit-card p{
   padding: 10px 0;
 }
+/*=================
+benefits section modal
+=================*/
+
 /*============
 tips section
 ============*/
