--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -177,7 +177,6 @@ section.benefits h2{
 /*=================
 benefits section modal
 =================*/
-
 /*============
 tips section
 ============*/
@@ -210,3 +209,84 @@ section.tips h2{
   transform: scale(1.1);
   transition: 0.25s;
 }
+
+/*============================
+RESOURCES.HTML
+============================*/
+
+/*==============
+resources-introduction
+==============*/
+section.resources-intro{
+  background-image: url(../resources-images/support-group-banner.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro-text{
+  width: 60%;
+  height: 150px;
+  backdrop-filter: blur(10px) saturate(20%);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro-text h1{
+  font-size: 40px;
+  text-shadow: 1px 1px 4px var(--clr-secondary-1), -1px -1px 4px var(--clr-secondary-2);
+  color: var(--clr-btn-hover);
+}
+/*
+.resources-intro{
+  position: relative;
+  width: 100%;
+  height: 500px;
+  margin: 10px 0;
+}
+.resources-bg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../resources-images/support-group-banner.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(8px);
+}
+.resources-intro-text{
+  align-self: center;
+  justify-self: center;
+}
+*/
+/*
+.resources-intro-bg{
+  width: 100%;
+}
+.resources-intro-bg img{
+  width: 100%;
+  filter: blur(8px);
+}
+.resources-intro-text{
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4);
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+.resources-intro-text h1{
+
+}
+*/
+/*======================
+helplines dropdown section
+======================*/
