--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -265,6 +265,10 @@ helplines dropdown section
 .helplines-dropdown{
   width: 400px;
 }
+.helplines-dropdown img{
+  max-width: 100%;
+  height: 80px;
+}
 /* dropdown button */
 .dropdown-btn{
   padding: 10px 0;
@@ -280,6 +284,7 @@ helplines dropdown section
 .dropdown-btn-samaritans{
   background-color: var(--clr-dropdown-samaritans);
 }
+
 /* mind */
 .dropdown-btn-mind{
   background-color: var(--clr-dropdown-mind);
@@ -287,6 +292,13 @@ helplines dropdown section
 /* giveusashout */
 .dropdown-btn-shout{
   background-color: var(--clr-dropdown-shout);
+}
+.dropdown-img-shout{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: fit-content;
+  padding-top: 10px;
 }
 /* display show */
 .dropdown-content-show{
