--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,7 +25,7 @@ Global Styles
   --font-roboto-mono: 'Roboto Mono', monospace;
   --font-roboto-serif: 'Roboto', sans-serif;
 }
-*,*::after,*::before{
+*{
   font-family: var(--font-roboto-serif);
   box-sizing: border-box;
   margin: 0;
@@ -262,29 +262,18 @@ helplines dropdown section
   justify-content:center;
   gap: 75px;
 }
-.helplines-dropdown{
+.dropdown-btn{
   width: 400px;
 }
-.helplines-dropdown img{
+.dropdown-btn img{
   max-width: 100%;
   height: 80px;
-}
-/* dropdown button */
-.dropdown-btn{
-  padding: 10px 0;
-  font-size: 1.5rem;
-  border-radius: 5px;
-  width: 400px;
-  font-family: var(--font-roboto-mono);
-  color: var(--clr-white);
-  letter-spacing: 0.25rem;
 }
 /* individual content styling (colors) */
 /* samaritans */
 .dropdown-btn-samaritans{
   background-color: var(--clr-dropdown-samaritans);
 }
-
 /* mind */
 .dropdown-btn-mind{
   background-color: var(--clr-dropdown-mind);
@@ -293,10 +282,11 @@ helplines dropdown section
 .dropdown-btn-shout{
   background-color: var(--clr-dropdown-shout);
 }
-.dropdown-img-shout{
-  display: flex;
-  justify-content: center;
+.dropdown-btn{
+  display: block;
+  text-align: center;
   width: 100%;
+  width: 400px;
   height: fit-content;
   padding-top: 10px;
 }
