--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -360,6 +360,7 @@ educational section
 }
 .education-container img{
   max-width: 30%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .education-container-details{
   margin: 5px 15px;
@@ -375,7 +376,41 @@ educational section
   text-decoration: none;
   color: var(--clr-white);
   background-image: linear-gradient(45deg,var(--clr-link-blue),var(--clr-link-purple));
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 5px 10px;
   border-radius: 5px;
 }
-
+/*=================
+treatments section
+=================*/
+.treatments{
+  margin: 50px 100px;
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+}
+.treatments-container{
+  text-align: center;
+  border-top: 1px solid var(--clr-black);
+  border-bottom: 1px solid var(--clr-black);
+  padding: 10px 0;
+  width: 30%;
+}
+.treatments-container:hover{
+  transform: scale(1.1);
+  transition: 0.25s;
+}
+.treatments-container img{
+  width: 100%;
+  margin: 30px 0;
+}
+.treatments-container a{
+  text-decoration: none;
+  color: var(--clr-white);
+  background-image: linear-gradient(45deg,var(--clr-link-blue),var(--clr-link-purple));
+  padding: 5px 40px;
+  border-radius: 5px;
+}
+.treatments-container div{
+  margin: 15px 0;
+}
