--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -432,7 +432,7 @@ page container (in order to achieve left | right)
 .contact-page-container{
   display: flex;
   justify-content: center;
-  margin-bottom: 90px;
+  margin-bottom: 110px;
 }
 /*============
 form section
@@ -441,7 +441,7 @@ form{
   width: 45%;
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
   background-color: var(--clr-primary-2);
-  padding: 0 20px 25px;
+  padding: 0 20px;
 }
 .contact-form-group{
   padding: 25px 0;
@@ -483,4 +483,53 @@ contact information section
   background-color: #f3f5ff;
   padding: 25px 30px;
   width: 35%;
+}
+/*=======
+contact info container
+=======*/
+.contact-info-container{
+  padding: 35px 0;
+}
+.contact-info-item{
+  border-bottom: 1px solid var(--clr-btn-border);
+  padding: 15px 0;
+}
+.contact-info-item p{
+  margin-top: 5px;
+}
+/*==================
+social media section
+==================*/
+/* social media container*/
+.social-media-container h3{
+  margin-bottom: 25px;
+}
+.social-media-item{
+  padding: 15px 0;
+}
+.social-media-item p{
+  display: inline-block;
+  margin-left: 10px;
+  color: var(--clr-black);
+}
+.social-media-item a{
+  color: inherit;
+}
+/* social media icons */
+.social-media-item {
+  font-size: 1.1rem;
+}
+/* facebook */
+.facebook-item i{
+  color: #3240de;
+}
+/* twitter */
+.twitter-item{
+  color: #222;
+}
+/* instagram */
+.instagram-item i{
+  background: -webkit-linear-gradient(rgb(188, 12, 241), rgb(212, 4, 4));
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
